[package]
name = "silica-contract-sdk"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust SDK for Silica smart contracts"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true, default-features = false, features = ["alloc"] }
subtle = "2.4"
scopeguard = "1.2"
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
itoa = { version = "1.0", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
tokio = { workspace = true }
wasm-bindgen-test = "0.3"