[package]
name = "timelock-contract"
version = "0.1.0"
edition = "2024"
authors = ["Chert Team"]
license = "MIT"
description = "Time-delayed execution contract for governance operations and security-critical upgrades"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
silica-contract-sdk = { workspace = true }
serde = { workspace = true }
postcard =  { workspace = true }
blake3 =  { workspace = true }
hex = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true